--- a/app-ui/src/app/components/active-task/active-task.component.less
+++ b/app-ui/src/app/components/active-task/active-task.component.less
@@ -7,7 +7,7 @@
   border-bottom: 1px solid #ccc;
   align-items: center;
   align-content: center;
-  min-height: 70px;
+  height: 85px;
   box-sizing: border-box;
 }
 
