--- a/app-ui/src/app/components/group-list/group-list.component.less
+++ b/app-ui/src/app/components/group-list/group-list.component.less
@@ -2,6 +2,10 @@
   display: block;
 }
 
+.group-name {
+  cursor: pointer;
+}
+
 .not-found-message, .list-title {
   padding: 0 1rem;
 }
